lock some video settings options when pipeline is applied